hw3/kuber/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-health-srv
  labels:
    app: my-health-srv
spec:
  replicas: 3
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      env: demo
  template:
    metadata:
      labels:
        env: demo
        app: my-health-srv
    spec:
      containers:
      - name: my-health-srv
        image: antonkurudinov/otus_hw3:1.0
        ports:
        - containerPort: 8000
          name: my-health-port
        resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
        livenessProbe:
            httpGet:
              port: 8000
              path: /health
            initialDelaySeconds: 10
            periodSeconds: 10
