hw3/kuber/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-health-srv-svc
spec:
  selector:
    app: my-health-srv
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: NodePort
