hw3/kuber/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-health-srv-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /health
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /otusapp/([A-Za-z0-9]+)/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: my-health-srv-svc
                port:
                 number: 80
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: my-health-srv-svc
                port:
                  number: 80
